k8s/ingress/connectors-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connectors-ingress
spec:
  rules:
    - host: connectors-edge.dust.tt
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: connectors-service
                port:
                  number: 80
